build/eks-test-ns/noncore-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noncore-api
  namespace: eks-test-ns
spec:
  selector:
    matchLabels:
      app: noncore-api
  template:
    metadata:
      labels:
        app: noncore-api
    spec:
      containers:
      - name: noncore-api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/noncore-api:latest
        args: ["npm", "run", "start:noncore"]
        resources:
          requests:
            memory: "200Mi"
            cpu: "0.1"
          limits:
            memory: "400Mi"
            cpu: "0.3"
        ports:
        - containerPort: 80
