build/eks-test-ns/noncore-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: noncore-api-service
  namespace: eks-test-ns
spec:
  selector:
    app: noncore-api
  type: ClusterIP 
  ports:
  - name: node
    port: 80
    targetPort: 8080
